Revert "[FIX] Extra scroll box in project containers on mobile."
This reverts commit a755d7c1e0773d03708af2177398cbd60f3d710a.

--- a/css/styles.css
+++ b/css/styles.css
@@ -544,7 +544,7 @@ footer {
     max-width: 900px;
     height: 300px;
     margin: 0 auto 30px auto;
-    overflow: hidden;
+    overflow: auto;
     background: #fff;
     border-radius: 4px;
 }
